--- a/Android-Studying/YoungHeart/AndroidLib/build.gradle
+++ b/Android-Studying/YoungHeart/AndroidLib/build.gradle
@@ -1,24 +1,23 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 17
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 8
+        targetSdkVersion 17
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:support-v4:18.0.0'
+    compile files('libs/fastjson_1.1.33.jar')
 }
