--- a/Android-Studying/YoungHeart/YoungHeartApp/build.gradle
+++ b/Android-Studying/YoungHeart/YoungHeartApp/build.gradle
@@ -21,5 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':AndroidLib')
     compile 'com.android.support:appcompat-v7:26.+'
 }
